Fix size thumb on mobile screen

--- a/components/Home/Slider/SilderBanner.module.sass
+++ b/components/Home/Slider/SilderBanner.module.sass
@@ -131,7 +131,6 @@
             font-size: 16px
             line-height: 20px
             padding: 8px 6px
-            width: 160px
           @media (min-width: 540px) and (max-width: 767px)
             font-size: 16px
             line-height: 20px
@@ -149,25 +148,42 @@
           display: flex
           align-items: center
           justify-content: space-between
+          gap: 12px
           a
-            padding: 0px 8px
-            @media (max-width: 991px )
-              padding: 0px 4px
-              width: 30px
-            @media (min-width: 992px )
-              padding: 0px 8px
-              width: 48px
-            @media (min-width: 1439px )
-              padding: 0px 12px
-              width: 59px
-          a:first-child
-            padding: 0px 8px 0px 0px
-            @media (max-width: 991px )
-              padding: 0px 4px
-            @media (min-width: 992px )
-              padding: 0px 8px
-            @media (min-width: 1439px )
-              padding: 0px 12px
+            width: 24px
+          @media (min-width: 420px )
+            a
+              width: 28px
+          @media (min-width: 768px )
+            gap: 12px
+            a
+              width: 22px
+          @media (min-width: 1024px )
+            gap: 24px
+            a
+              width: 28px
+          @media (min-width: 1279px )
+            a
+              width: 36px
+          // a
+          //   padding: 0px 8px
+          //   @media (max-width: 991px )
+          //     padding: 0px 4px
+          //     width: 30px
+          //   @media (min-width: 992px )
+          //     padding: 0px 8px
+          //     width: 48px
+          //   @media (min-width: 1439px )
+          //     padding: 0px 12px
+          //     width: 59px
+          // a:first-child
+          //   padding: 0px 8px 0px 0px
+          //   @media (max-width: 991px )
+          //     padding: 0px 4px
+          //   @media (min-width: 992px )
+          //     padding: 0px 8px
+          //   @media (min-width: 1439px )
+          //     padding: 0px 12px
   .btnApplyINO
     display: flex
     align-items: center
