--- a/components/card/ContainerCard.module.sass
+++ b/components/card/ContainerCard.module.sass
@@ -147,11 +147,11 @@
         a 
             color: white
     @media screen and (min-width: 415px) 
-        height: 40%
+        height: 39%
     @media screen and (min-width: 540px) 
-        height: 32%
+        height: 39%
     @media screen and (min-width: 640px) 
-        height: 27%
+        height: 35%
     @media screen and (min-width: 768px) 
         height: 48%
     @media screen and (min-width: 992px) 
